--- a/YoursMine/YoursMine/니꺼사기/Cells/ProductSellingCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/ProductSellingCell.xib
@@ -22,7 +22,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6X4-RE-mvR">
                                 <rect key="frame" x="0.0" y="0.0" width="601" height="727"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" name="LightYellowColor"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" name="LightYellowColor"/>
