--- a/YoursMine/YoursMine/니꺼사기/ItemListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/ItemListCell.xib
@@ -17,51 +17,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemListCell" rowHeight="124" id="OXY-Y0-vmY" customClass="ItemListCell" customModule="YoursMine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="520" height="124"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemListCell" rowHeight="99" id="OXY-Y0-vmY" customClass="ItemListCell" customModule="YoursMine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="409" height="121"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OXY-Y0-vmY" id="65M-uo-F46">
-                <rect key="frame" x="0.0" y="0.0" width="520" height="124"/>
+                <rect key="frame" x="0.0" y="0.0" width="409" height="121"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ww-Mq-8G9">
-                        <rect key="frame" x="0.0" y="0.0" width="520" height="124"/>
+                        <rect key="frame" x="0.0" y="0.0" width="409" height="121"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="agm-tE-Dd3">
-                                <rect key="frame" x="15" y="10" width="100" height="104"/>
+                                <rect key="frame" x="15" y="10" width="80" height="101"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="5zy-mj-zdv"/>
+                                    <constraint firstAttribute="width" constant="80" id="5zy-mj-zdv"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lsq-mc-2Id">
-                                <rect key="frame" x="130" y="0.0" width="390" height="124"/>
+                                <rect key="frame" x="110" y="0.0" width="299" height="121"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9qK-Id-JSn">
-                                        <rect key="frame" x="0.0" y="10" width="380" height="104"/>
+                                        <rect key="frame" x="0.0" y="10" width="289" height="101"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="레오나르도 갈축 키보드 보드 nChattings nChattings" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fpr-zh-XTg">
-                                                <rect key="frame" x="3" y="15" width="287" height="37.5"/>
+                                                <rect key="frame" x="3" y="15" width="201" height="37.5"/>
                                                 <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="16"/>
                                                 <color key="textColor" name="TextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="51,000원" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fY-h8-buI">
-                                                <rect key="frame" x="316" y="15" width="59" height="17.5"/>
+                                                <rect key="frame" x="225" y="15" width="59" height="18"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="QcZ-xf-ItW"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="15"/>
                                                 <color key="textColor" red="0.23137254900000001" green="0.20784313730000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wTw-nx-hWM">
-                                                <rect key="frame" x="3" y="69" width="132" height="25"/>
+                                                <rect key="frame" x="3" y="76" width="111" height="20"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하나은행" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b9I-sa-TZx">
-                                                        <rect key="frame" x="0.0" y="0.0" width="45" height="25"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="45" height="20"/>
                                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="13"/>
                                                         <color key="textColor" name="TextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="김하나" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="991-wF-PBW">
-                                                        <rect key="frame" x="53" y="5" width="34" height="15.5"/>
+                                                        <rect key="frame" x="53" y="2.5" width="34" height="15.5"/>
                                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="13"/>
                                                         <color key="textColor" name="TextColor"/>
                                                         <nil key="highlightedColor"/>
@@ -70,15 +73,15 @@
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="991-wF-PBW" firstAttribute="centerY" secondItem="b9I-sa-TZx" secondAttribute="centerY" id="MjV-59-AU0"/>
+                                                    <constraint firstAttribute="bottom" secondItem="b9I-sa-TZx" secondAttribute="bottom" id="QlS-5x-TCl"/>
                                                     <constraint firstItem="b9I-sa-TZx" firstAttribute="leading" secondItem="wTw-nx-hWM" secondAttribute="leading" id="WQ8-4g-VQh"/>
                                                     <constraint firstItem="b9I-sa-TZx" firstAttribute="top" secondItem="wTw-nx-hWM" secondAttribute="top" id="c2h-Zh-9bR"/>
                                                     <constraint firstItem="991-wF-PBW" firstAttribute="leading" secondItem="b9I-sa-TZx" secondAttribute="trailing" constant="8" id="fod-b5-N3w"/>
-                                                    <constraint firstAttribute="bottom" secondItem="b9I-sa-TZx" secondAttribute="bottom" id="vJg-iz-lD0"/>
-                                                    <constraint firstAttribute="height" constant="25" id="wJ4-kM-wSu"/>
+                                                    <constraint firstAttribute="height" constant="20" id="wJ4-kM-wSu"/>
                                                 </constraints>
                                             </view>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NsP-eG-IQA">
-                                                <rect key="frame" x="255" y="69" width="120" height="25"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="NsP-eG-IQA">
+                                                <rect key="frame" x="164" y="71" width="120" height="25"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sKs-A9-Vyr">
                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="25"/>
@@ -93,7 +96,7 @@
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="112" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYR-AR-ZwU">
                                                                 <rect key="frame" x="28" y="5" width="27" height="15"/>
-                                                                <fontDescription key="fontDescription" name="NanumBarunGothicLight" family="NanumBarunGothic" pointSize="12"/>
+                                                                <fontDescription key="fontDescription" name="NanumBarunGothicLight" family="NanumBarunGothic" pointSize="11"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -108,7 +111,6 @@
                                                             <constraint firstItem="bYR-AR-ZwU" firstAttribute="top" secondItem="sKs-A9-Vyr" secondAttribute="top" constant="5" id="oE0-27-y8U"/>
                                                             <constraint firstAttribute="trailing" secondItem="bYR-AR-ZwU" secondAttribute="trailing" constant="5" id="tdN-hi-23Y"/>
                                                             <constraint firstAttribute="bottom" secondItem="bYR-AR-ZwU" secondAttribute="bottom" constant="5" id="x4r-XD-HOq"/>
-                                                            <constraint firstItem="bYR-AR-ZwU" firstAttribute="centerY" secondItem="dfi-zp-p9c" secondAttribute="centerY" id="ySQ-58-Tql"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="INE-c6-7qz">
@@ -122,9 +124,9 @@
                                                                     <constraint firstAttribute="width" constant="25" id="xdj-We-7am"/>
                                                                 </constraints>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="112" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQE-Kz-nuq">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQE-Kz-nuq">
                                                                 <rect key="frame" x="28" y="5" width="27" height="15"/>
-                                                                <fontDescription key="fontDescription" name="NanumBarunGothicLight" family="NanumBarunGothic" pointSize="12"/>
+                                                                <fontDescription key="fontDescription" name="NanumBarunGothicLight" family="NanumBarunGothic" pointSize="11"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -147,16 +149,16 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Fpr-zh-XTg" secondAttribute="trailing" constant="90" id="5mM-3H-aNF"/>
+                                            <constraint firstItem="wTw-nx-hWM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Fpr-zh-XTg" secondAttribute="bottom" constant="10" id="1Ug-I1-BU2"/>
+                                            <constraint firstAttribute="bottom" secondItem="wTw-nx-hWM" secondAttribute="bottom" constant="5" id="4br-4R-VyM"/>
                                             <constraint firstItem="NsP-eG-IQA" firstAttribute="trailing" secondItem="9fY-h8-buI" secondAttribute="trailing" id="8O0-2j-a4e"/>
-                                            <constraint firstItem="NsP-eG-IQA" firstAttribute="leading" secondItem="wTw-nx-hWM" secondAttribute="trailing" constant="120" id="BgZ-EJ-LR1"/>
-                                            <constraint firstAttribute="bottom" secondItem="NsP-eG-IQA" secondAttribute="bottom" constant="10" id="Ceh-M7-AXJ"/>
+                                            <constraint firstItem="NsP-eG-IQA" firstAttribute="leading" secondItem="wTw-nx-hWM" secondAttribute="trailing" constant="50" id="BgZ-EJ-LR1"/>
+                                            <constraint firstAttribute="trailing" secondItem="Fpr-zh-XTg" secondAttribute="trailing" constant="85" id="CHi-1J-vnL"/>
+                                            <constraint firstAttribute="bottom" secondItem="NsP-eG-IQA" secondAttribute="bottom" constant="5" id="Ceh-M7-AXJ"/>
                                             <constraint firstItem="wTw-nx-hWM" firstAttribute="leading" secondItem="Fpr-zh-XTg" secondAttribute="leading" id="IKv-0N-XXE"/>
-                                            <constraint firstItem="wTw-nx-hWM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Fpr-zh-XTg" secondAttribute="bottom" constant="5" id="Mhg-dV-PFh"/>
                                             <constraint firstItem="Fpr-zh-XTg" firstAttribute="top" secondItem="9qK-Id-JSn" secondAttribute="top" constant="15" id="TR0-iF-vTc"/>
                                             <constraint firstAttribute="trailing" secondItem="9fY-h8-buI" secondAttribute="trailing" constant="5" id="dZS-pP-hWo"/>
                                             <constraint firstItem="9fY-h8-buI" firstAttribute="top" secondItem="Fpr-zh-XTg" secondAttribute="top" id="ddT-vZ-XER"/>
-                                            <constraint firstItem="NsP-eG-IQA" firstAttribute="centerY" secondItem="wTw-nx-hWM" secondAttribute="centerY" id="feo-rg-T0t"/>
                                             <constraint firstItem="Fpr-zh-XTg" firstAttribute="leading" secondItem="9qK-Id-JSn" secondAttribute="leading" constant="3" id="vzv-Qn-YzM"/>
                                         </constraints>
                                     </view>
@@ -197,7 +199,7 @@
                 <outlet property="priceLabel" destination="9fY-h8-buI" id="Mei-xg-2mm"/>
                 <outlet property="sellerIDLabel" destination="991-wF-PBW" id="Wbb-pO-c00"/>
             </connections>
-            <point key="canvasLocation" x="162.31884057971016" y="-35.491071428571423"/>
+            <point key="canvasLocation" x="81.884057971014499" y="-36.495535714285715"/>
         </tableViewCell>
     </objects>
     <resources>
