--- a/YoursMine/YoursMine/니꺼사기/Cells/ProductSellingCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/ProductSellingCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SHI-bq-syd">
                         <rect key="frame" x="0.0" y="0.0" width="601" height="727"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6X4-RE-mvR">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6X4-RE-mvR">
                                 <rect key="frame" x="0.0" y="0.0" width="601" height="727"/>
                                 <color key="backgroundColor" name="LightYellowColor"/>
                             </tableView>
