--- a/YoursMine/YoursMine/니꺼사기/ItemListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/ItemListCell.xib
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemListCell" rowHeight="99" id="OXY-Y0-vmY" customClass="ItemListCell" customModule="YoursMine" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ItemListCell" rowHeight="99" id="OXY-Y0-vmY" customClass="ItemListCell" customModule="YoursMine" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="409" height="121"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OXY-Y0-vmY" id="65M-uo-F46">
